CMAKE_MINIMUM_REQUIRED ( VERSION 3.10 )
PROJECT ( ToDo-Manager )

SET ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "/cmake/modules" )

FIND_PACKAGE ( ArgsParser REQUIRED )

FILE ( GLOB_RECURSE SRC "src/*.cpp" )
FILE ( GLOB_RECURSE HDR "include/*.hpp" )

ADD_EXECUTABLE ( tdm ${HDR} ${SRC} )
TARGET_INCLUDE_DIRECTORIES ( tdm "include" ${ARGS_PARSER_INCLUDE_DIR} )
